--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Scott Donnelly",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^2.9.26",
     "body-parser": "~1.9.0",
     "cookie-parser": "~1.3.2",
     "ejs": "~1.0.0",
