--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs-locals": "~1.0.2",
     "express": "~4.9.5",
     "express-session": "~1.8.2",
+    "lodash": "^3.9.3",
     "method-override": "~2.2.0",
     "optimist": "~0.6.1",
     "passport": "^0.2.2",
