--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "ejs-locals": "~1.0.2",
     "express": "~4.9.5",
     "express-session": "~1.8.2",
+    "koa": "^0.21.0",
+    "koa-router": "^5.0.1",
+    "koa-session": "^3.1.0",
+    "koa-static": "^1.4.9",
     "lodash": "^3.9.3",
     "method-override": "~2.2.0",
     "optimist": "~0.6.1",
