--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "optimist": "~0.6.1",
     "passport": "^0.2.2",
     "passport-twitter": "^1.0.3",
+    "rethinkdb": "^2.0.0-1",
     "seneca": "plugin",
     "seneca-admin": "~0.2.0",
     "seneca-auth": "~0.4.0",
