--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs-locals": "~1.0.2",
     "express": "~4.9.5",
     "express-session": "~1.8.2",
+    "https": "^1.0.0",
     "jsonwebtoken": "^5.0.1",
     "koa": "^0.21.0",
     "koa-jwt": "^1.1.0",
@@ -33,6 +34,7 @@
     "optimist": "~0.6.1",
     "passport": "^0.2.2",
     "passport-twitter": "^1.0.3",
+    "pem": "^1.7.2",
     "rethinkdb": "^2.0.0-1",
     "seneca": "plugin",
     "seneca-admin": "~0.2.0",
