--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     "ejs-locals": "~1.0.2",
     "express": "~4.9.5",
     "express-session": "~1.8.2",
-    "https": "^1.0.0",
     "jsonwebtoken": "^5.0.1",
     "koa": "^0.21.0",
-    "koa-jwt": "^1.1.0",
+    "koa-jwt": "https://github.com/sc0ttyd/koa-jwt/archive/master.tar.gz",
     "koa-router": "^5.0.1",
     "koa-session": "^3.1.0",
     "koa-static": "^1.4.9",
@@ -33,12 +32,14 @@
     "method-override": "~2.2.0",
     "optimist": "~0.6.1",
     "passport": "^0.2.2",
+    "passport-google-oauth": "^0.2.0",
     "passport-twitter": "^1.0.3",
     "pem": "^1.7.2",
     "rethinkdb": "^2.0.0-1",
-    "seneca": "plugin",
+    "seneca": "https://github.com/sc0ttyd/seneca/archive/master.tar.gz",
     "seneca-admin": "~0.2.0",
     "seneca-auth": "~0.4.0",
+    "seneca-bluebird": "https://github.com/sc0ttyd/seneca-bluebird/archive/master.tar.gz",
     "seneca-data-editor": "~0.2.0",
     "seneca-jsonrest-api": "~0.3.1",
     "seneca-perm": "~0.4.0",
