--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bluebird": "^2.9.26",
     "body-parser": "~1.9.0",
+    "config-layered": "^1.0.1",
     "cookie-parser": "~1.3.2",
     "ejs": "~1.0.0",
     "ejs-locals": "~1.0.2",
