--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "body-parser": "~1.9.0",
     "config-layered": "^2.0.0",
     "cookie-parser": "~1.3.2",
-    "ejs": "~1.0.0",
+    "ejs": "^2.5.5",
     "ejs-locals": "~1.0.2",
     "express": "~4.9.5",
     "express-session": "~1.8.2",
@@ -31,7 +31,7 @@
     "koa-router": "^5.0.1",
     "koa-session": "^3.1.0",
     "koa-static": "^1.4.9",
-    "lodash": "^3.9.3",
+    "lodash": "^4.17.1",
     "method-override": "~2.2.0",
     "optimist": "~0.6.1",
     "passport": "^0.2.2",
